# mhci

./: LICENSE
hw1/jnd/: jnd.pde
hw1/jnd_exp1/: jnd_exp1.pde
hw1/jnd_exp2/: jnd_exp2.pde
in-class/processing_audio_input_example/: pyproject.toml  speech_reg_osc.py
in-class/processing_audio_input_example/processing_audio_input/: processing_audio_input.pde
mini-project-1/: Taskfile.yml  index.html  script.js  style.css
mini-project-1/blind-dino/: index.html  script.js
mini-project-1/blind-snake/: Taskfile.yml  index.html  main.js  style.css
