[project]
name = "processing-audio-input-example"
version = "0.1.0"
description = ""
authors = [
    {name = "andre.liang",email = "namwoam@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "sounddevice (>=0.5.5,<0.6.0)",
    "python-osc (>=1.9.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
